--- a/forest_fire.ipynb
+++ b/forest_fire.ipynb
@@ -33,7 +33,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv(\"/content/amazon.csv\", encoding='latin1', parse_dates=['date'])\n",
+        "df = pd.read_csv(\"/amazon.csv\", encoding='latin1', parse_dates=['date'])\n",
         "df"
       ],
       "metadata": {
